force-app/main/default/objects/ContactPointPhone/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The consumer contact record that this phone record is related to</description>
    <inlineHelpText>The consumer contact record that this phone record is related to</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Point Phones</relationshipLabel>
    <relationshipName>Contact_Point_Phones</relationshipName>
    <type>Lookup</type>
</CustomField>