force-app/main/default/objects/ContactPointPhone/fields/Preferred__c.field-meta.xml
<CustomField>
    <fullName>Preferred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is the preferred phone number of the consumer</description>
    <inlineHelpText>Indicates if this is the preferred phone number of the consumer</inlineHelpText>
    <label>Preferred</label>
    <type>Checkbox</type>
</CustomField>