force-app/main/default/objects/ContactPointPhone/fields/UniqueMobile__c.field-meta.xml
<CustomField>
    <fullName>UniqueMobile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the verified mobile number has been marked as Unique from SAP CRM</description>
    <inlineHelpText>Indicates if the verified mobile number has been marked as Unique from SAP CRM</inlineHelpText>
    <label>Unique Mobile</label>
    <type>Checkbox</type>
</CustomField>